Fix text align in the result board

--- a/Publish/css/result-board.css
+++ b/Publish/css/result-board.css
@@ -39,14 +39,14 @@
     padding: 0.2em 0.5em;
 }
 
-.body.result-board table tr td:nth-child(1),
 .body.result-board table tr td:nth-child(2),
-.body.result-board table tr td:nth-child(3) {
+.body.result-board table tr td:nth-child(3),
+.body.result-board table tr td:nth-child(4) {
     text-align: left;
 }
 
-.body.result-board table tr td:nth-child(4),
-.body.result-board table tr td:nth-child(5) {
+.body.result-board table tr td:nth-child(5),
+.body.result-board table tr td:nth-child(6) {
     text-align: center;
 }
 
